# activityRegister

./: Activity.cpp  Activity.h  CMakeLists.txt  ListActivityWindow.cpp  ListActivityWindow.h  MainWindow.cpp  MainWindow.h  NewActivityWindow.cpp  NewActivityWindow.h  README.md  Register.cpp  Register.h  main.cpp
test/: CMakeLists.txt  TestActivity.cpp  TestRegister.cpp  runAllTests.cpp
test/lib/googletest/: CMakeLists.txt
